View Issue Details

IDProjectCategoryView StatusLast Update
0026973CommunityOCCT:Visualizationpublic2019-06-13 13:48
ReportervpaAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version6.9.0 
Target Version7.0.0Fixed in Version7.0.0 
Summary0026973: Visualization - selection of entities hidden by clipping planes is broken
DescriptionParts, hidden by clipping planes, are detected and highlighted instead of visible object.
See related forum topic: http://www.opencascade.com/content/possible-bug-visualization-module
Steps To Reproduce
pload MODELING VISUALIZATION
vinit View1
vclear
vaxo
vsetdispmode 1
box b 1 1 1
vdisplay b
vfit

vclipplane create pln
vclipplane set pln view Driver1/Viewer1/View1
vclipplane change pln equation 0 1 0 -0.5

vselmode b 4 1
vmoveto 200 140

Actual result: wrong face is highlighted (which is clipped within specified cursor position).
TagsNo tags attached.
Test case numberbugs vis bug26973

Attached Files

  • clip_sel_680_OK.png (2,803 bytes)
  • clip_sel_691_KO.png (3,479 bytes)
  • clip_sel_master_KO.png (2,660 bytes)
  • clip_sel.png (15,714 bytes)

Relationships

related to 0022357 closedbugmaster Open CASCADE Hidden face selection 
related to 0024623 closedbugmaster Open CASCADE Visualization - improve selection mechanism 

Activities

kgv

2015-12-10 10:56

developer  

clip_sel_680_OK.png (2,803 bytes)

kgv

2015-12-10 10:57

developer  

clip_sel_691_KO.png (3,479 bytes)

kgv

2015-12-10 10:58

developer  

clip_sel_master_KO.png (2,660 bytes)

kgv

2015-12-10 10:59

developer  

clip_sel.png (15,714 bytes)

git

2015-12-15 15:20

administrator   ~0049158

Branch CR26973 has been created by vpa.

SHA-1: 38bae2ca3a48f07ee7668e7993e4adccc04bf1a3


Detailed log of new commits:

Author: vpa
Date: Tue Dec 15 15:17:27 2015 +0300

    0026973: Visualization - selection of entities hidden by clipping planes is broken
    
    - misprint in distance calculation in SelectMgr_RectangularFrustum::IsClipped is corrected;
    - selecting volume manager in clipping check in SelectMgr_ViewerSelector::checkOverlap was replaced ;
    - added view-defined clipping planes check to SelectMgr_RectangularFrustum;
    - test case for issue 0026973.

vpa

2015-12-15 15:22

developer   ~0049159

Dear Kirill,

the patch in branch CR26973 is ready to be reviewed.

git

2015-12-15 15:54

administrator   ~0049162

Branch CR26973 has been updated forcibly by vpa.

SHA-1: 1468a1d86fe168dee71cbb0363aee9df093f7a9d

git

2015-12-15 16:39

administrator   ~0049167

Branch CR26973 has been updated forcibly by vpa.

SHA-1: 64a735d6c9fefa1ba1007cceafa1306dc688cd6f

kgv

2015-12-15 16:42

developer   ~0049168

Please test the patch.

git

2015-12-15 19:57

administrator   ~0049183

Branch CR26973 has been updated forcibly by vpa.

SHA-1: 98ad11a053b7c60757acd6ff67abab5d2e4790b4

mkv

2015-12-16 12:08

tester   ~0049193

Dear BugMaster,
Branch CR26973 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms on Release mode.
SHA-1: 64a735d6c9fefa1ba1007cceafa1306dc688cd6f

There are following compilation errors:
Linux:
http://jenkins-test-01.nnov.opencascade.com:8080/view/CR26973-master/job/CR26973-master_build_occt_linux/1/parsed_console/
../../../../inc/SelectMgr_ViewClipRange.hxx:26:3: error: 'SelectMgr_ViewClipRange::SelectMgr_ViewClipRange()' is private
../../../../inc/SelectMgr_RectangularFrustum.hxx:37:48: error: within this context

Windows:
http://jenkins-test-01.nnov.opencascade.com:8080/view/CR26973-master/job/CR26973-master_build_occt_windows_64/1/parsed_console/
         d:\builds\vc10\CR26973-master-occt-64\inc\SelectMgr_RectangularFrustum.hxx(37): error C2248: 'SelectMgr_ViewClipRange::SelectMgr_ViewClipRange' : cannot access private member declared in class 'SelectMgr_ViewClipRange'

MacOS:
http://jenkins-test-01.nnov.opencascade.com:8080/view/CR26973-master/job/CR26973-master_prepare_build_occt_MacOS/1/parsed_console/
/Users/mnt/tools/WOK680/wok_entities/LOC/dev/CR26973-master-occt/src/SelectMgr/SelectMgr_RectangularFrustum.hxx:37:3: error: field of type 'SelectMgr_ViewClipRange' has private default constructor

mkv

2015-12-16 12:09

tester   ~0049194

Dear vpa,
Branch CR26973 has been rejected due to:
- compilation errors

git

2015-12-16 12:25

administrator   ~0049199

Branch CR26973 has been updated forcibly by vpa.

SHA-1: 404dfd895b2887737b31600a3b1c17ed3baaa665

vpa

2015-12-16 12:26

developer   ~0049200

Dear Mikhail,

branch CR26973 was updated to fix the compilation error. Please, test.

mkv

2015-12-17 12:53

tester   ~0049229

Dear BugMaster,
Branch CR26973 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 404dfd895b2887737b31600a3b1c17ed3baaa665

Number of compiler warnings:

occt component :
Linux: 0 (0 on master)
Windows: 0 (0 on master)
MacOS : 134 (134 on master)

products component :
Linux: 37 (37 on master)
Windows: 0 (0 on master)

Regressions/Differences/Improvements:
No regressions/differences

Testing cases:
http://occt-tests/CR26973-master-occt-64/Debian70-64/bugs/vis/bug26973.html
http://occt-tests/CR26973-master-occt-64/Windows-64-VC10/bugs/vis/bug26973.html
bugs vis bug26973: OK

Testing on Linux:
occt component :
Total MEMORY difference: 93040283 / 94053026 [-1.08%]
Total CPU difference: 19575.699999999797 / 19278.24999999991 [+1.54%]
products component :
Total MEMORY difference: 26186046 / 26088083 [+0.38%]
Total CPU difference: 7661.960000000003 / 7351.649999999994 [+4.22%]

Testing on Windows:
occt component :
Total MEMORY difference: 56330900 / 56346339 [-0.03%]
Total CPU difference: 17798.965295199087 / 17820.197031298892 [-0.12%]
products component :
Total MEMORY difference: 16516423 / 16529851 [-0.08%]
Total CPU difference: 5680.058810399968 / 5737.9039811999755 [-1.01%]

There are no differences in images found by testdiff.

mkv

2015-12-17 12:53

tester   ~0049230

Dear vpa,
could you please review following test case
bugs vis bug26973

vpa

2015-12-17 13:48

developer   ~0049238

Dear Mikhail,

screenshots in test bugs vis bug26973 are OK. Please, switch to tested.

mkv

2015-12-17 14:12

tester   ~0049240

Dear BugMaster,
Branch CR26973 is TESTED.

git

2016-04-17 13:54

administrator   ~0052998

Branch CR26973 has been deleted by kgv.

SHA-1: 404dfd895b2887737b31600a3b1c17ed3baaa665

Related Changesets

occt: master e9312c0f

2015-12-16 09:25:03

vpa


Committer: bugmaster Details Diff
0026973: Visualization - selection of entities hidden by clipping planes is broken

- misprint in distance calculation in SelectMgr_RectangularFrustum::IsClipped is corrected;
- selecting volume manager in clipping check in SelectMgr_ViewerSelector::checkOverlap was replaced ;
- added view-defined clipping planes check to SelectMgr_RectangularFrustum;
- test case for issue 0026973.
Affected Issues
0026973
mod - src/SelectMgr/FILES Diff File
mod - src/SelectMgr/SelectMgr_BaseFrustum.cxx Diff File
mod - src/SelectMgr/SelectMgr_BaseFrustum.hxx Diff File
mod - src/SelectMgr/SelectMgr_RectangularFrustum.cxx Diff File
mod - src/SelectMgr/SelectMgr_RectangularFrustum.hxx Diff File
mod - src/SelectMgr/SelectMgr_SelectingVolumeManager.cxx Diff File
mod - src/SelectMgr/SelectMgr_SelectingVolumeManager.hxx Diff File
add - src/SelectMgr/SelectMgr_ViewClipRange.hxx Diff File
mod - src/SelectMgr/SelectMgr_ViewerSelector.cxx Diff File
mod - src/StdSelect/StdSelect_ViewerSelector3d.cxx Diff File
mod - src/StdSelect/StdSelect_ViewerSelector3d.hxx Diff File
add - tests/bugs/vis/bug26973 Diff File

Issue History

Date Modified Username Field Change
2015-12-09 17:10 vpa New Issue
2015-12-09 17:10 vpa Assigned To => kgv
2015-12-09 17:11 vpa Assigned To kgv => vpa
2015-12-09 17:11 vpa Status new => assigned
2015-12-09 17:11 vpa Steps to Reproduce Updated
2015-12-10 10:56 kgv Steps to Reproduce Updated
2015-12-10 10:56 kgv File Added: clip_sel_680_OK.png
2015-12-10 10:57 kgv File Added: clip_sel_691_KO.png
2015-12-10 10:58 kgv File Added: clip_sel_master_KO.png
2015-12-10 10:59 kgv File Added: clip_sel.png
2015-12-10 11:11 kgv Relationship added related to 0022357
2015-12-10 11:15 kgv Relationship added related to 0024623
2015-12-15 15:20 git Note Added: 0049158
2015-12-15 15:22 vpa Note Added: 0049159
2015-12-15 15:22 vpa Assigned To vpa => kgv
2015-12-15 15:22 vpa Status assigned => resolved
2015-12-15 15:54 git Note Added: 0049162
2015-12-15 16:39 git Note Added: 0049167
2015-12-15 16:42 kgv Note Added: 0049168
2015-12-15 16:42 kgv Assigned To kgv => bugmaster
2015-12-15 16:42 kgv Status resolved => reviewed
2015-12-15 16:42 kgv Target Version 7.1.0 => 7.0.0
2015-12-15 16:46 mkv Assigned To bugmaster => mkv
2015-12-15 19:57 git Note Added: 0049183
2015-12-16 12:08 mkv Note Added: 0049193
2015-12-16 12:09 mkv Note Added: 0049194
2015-12-16 12:09 mkv Assigned To mkv => vpa
2015-12-16 12:09 mkv Status reviewed => feedback
2015-12-16 12:25 git Note Added: 0049199
2015-12-16 12:26 vpa Note Added: 0049200
2015-12-16 12:26 vpa Assigned To vpa => mkv
2015-12-16 12:26 vpa Status feedback => reviewed
2015-12-17 12:53 mkv Note Added: 0049229
2015-12-17 12:53 mkv Note Added: 0049230
2015-12-17 12:53 mkv Assigned To mkv => vpa
2015-12-17 12:53 mkv Status reviewed => feedback
2015-12-17 12:54 mkv Test case number => bugs vis bug26973
2015-12-17 13:48 vpa Note Added: 0049238
2015-12-17 13:48 vpa Assigned To vpa => mkv
2015-12-17 13:48 vpa Status feedback => reviewed
2015-12-17 14:12 mkv Note Added: 0049240
2015-12-17 14:12 mkv Assigned To mkv => bugmaster
2015-12-17 14:12 mkv Status reviewed => tested
2015-12-18 15:25 bugmaster Changeset attached => occt master e9312c0f
2015-12-18 15:25 bugmaster Status tested => verified
2015-12-18 15:25 bugmaster Resolution open => fixed
2016-04-17 13:54 git Note Added: 0052998
2016-04-20 15:42 aiv Fixed in Version => 7.0.0
2016-04-20 15:50 aiv Status verified => closed